fixtures/valid/import.scl
include("fixtures/valid/basic", "fixtures/valid/simple-mixin")

simpleMixin("this is from simpleMixin")
