fixtures/invalid/error-in-include.scl
include("fixtures/invalid/illegalToken.scl")
